# cpp-android-ios-example

./: .gitignore  CMakeLists.txt  README.md  build-profile.json5  build.gradle  cross.podspec  settings.gradle
AppScope/: app.json5
android/: .gitignore  build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  cross.cpp  native-lib.cpp
android/src/main/java/com/cross/: Cross.java
example/android/: .gitignore  build.gradle  settings.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/android/src/main/: AndroidManifest.xml
example/android/src/main/java/com/cross/example/: MainActivity.java
example/android/src/main/res/layout/: activity_main.xml
example/harmony/: oh-package-lock.json5  oh-package.json5
example/harmony/src/main/: module.json5
example/harmony/src/main/ets/harmonyability/: HarmonyAbility.ets
example/harmony/src/main/ets/harmonybackupability/: HarmonyBackupAbility.ets
example/harmony/src/main/ets/pages/: Index.ets
example/harmony/src/main/resources/base/element/: string.json
example/harmony/src/main/resources/zh_CN/element/: string.json
example/harmony/src/ohosTest/: module.json5
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/example/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  cross.mm  main.m
example/ios/example.xcodeproj/: project.pbxproj
example/ios/exampleTests/: exampleTests.m
example/ios/exampleUITests/: exampleUITests.m
gradle/wrapper/: gradle-wrapper.properties
harmony/: Index.ets  build-profile.json5  oh-package.json5
harmony/src/main/: module.json5
harmony/src/main/cpp/: CMakeLists.txt
harmony/src/main/ets/: NativeReader.ets
harmony/src/main/ets/pages/: Index.ets
harmony/src/mock/: mock-config.json5
harmony/src/ohosTest/: module.json5
ios/: flutter_plugin.podspec
ios/Classes/: Cross.h  Cross.mm
src/download/: CMakeLists.txt  download.cpp
src/download/include/: download.h
src/url_signature/: CMakeLists.txt  README.md  url_signature.cpp
src/url_signature/include/: url_signature.h
test/: CMakeLists.txt  main.cpp  test.cpp
test/gtest/: CMakeLists.txt
