cmake_minimum_required(VERSION 3.10.2)
project(cross_root_project)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(third_party/jsoncpp)
add_subdirectory(src/url_signature)
add_subdirectory(src/download)
if (ANDROID)
    add_subdirectory(android/src/main/cpp)
elseif (IOS)

else ()
    add_subdirectory(third_party/gtest)
    add_subdirectory(test)
endif ()
